Fix responsiveness and make navbar button visible

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ html {
   min-height: 100%;
 }
 
+
 .img-responsive {
   max-width: 100%;
   height: auto;
@@ -69,7 +70,6 @@ html {
 }
 
 .dropdown>.dropdown-toggle:active {
-  /*Without this, clicking will make it sticky*/
   pointer-events: none;
 }
 
@@ -135,4 +135,54 @@ html {
   bottom: 0;
   width: 100%;
   height: 72px;
+}
+
+
+.form {
+
+  position: relative;
+}
+
+.form .fa-search {
+
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: #9ca3af;
+
+}
+
+.form span {
+
+  position: absolute;
+  right: 17px;
+  top: 13px;
+  padding: 2px;
+  border-left: 1px solid #d1d5db;
+
+}
+
+.form-input {
+
+  height: 55px;
+  text-indent: 33px;
+  border-radius: 10px;
+}
+
+.form-input:focus {
+
+  box-shadow: none;
+  border: none;
+}
+
+.navbar-light .navbar-toggler {
+  border-color: #f2c02c;
+}
+
+.navbar-toggler:focus {
+  box-shadow: 0 0 0 0;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(242,192,44, 1)' stroke-width='2.5' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
